fix alignments. tweak contact tabs.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@11845 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_contacts.scss
+++ b/src/main/resources/scss/_contacts.scss
@@ -274,6 +274,24 @@ $over-color: #f4f3f3;
 		}
 	}
 
+
+	.nti-secondary-tabbar-plain {
+		div.x-tab{
+			width: 110px;
+			text-align: center;
+
+			.x-tab-inner{
+				&, &:first-of-type, &:last-of-type {
+					text-align: center;
+					padding: 7px auto 8px auto !important;
+				}
+			}
+		}
+	}
+
+
+
+
 	.disabled-contacts-view{
 	//	padding: 10px;
 		padding-top: 0px;
